step4-virtual-hosting/003-second-site/005-mysql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  namespace: second-site
  labels:
    app: wordpress-mysql
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress-mysql
  type: ClusterIP
