step4-virtual-hosting/003-second-site/015-wordpress-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: second-site
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
  ports:
  - protocol: TCP
    port: 80
    name: http
  - protocol: TCP
    port: 443
    name: https
